--- a/html/suites.html
+++ b/html/suites.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" href="../images/ICON.PNG">
     <title>Our Products</title>
     <link rel="stylesheet" href="/css/cssSuites.css">
 </head>
@@ -9,6 +10,7 @@
 <a href="index.html">Back to Home</a><br>
 <header>
     <div class="container">
+        <img src="../images/US-Army-Logo.png" alt="200" width="200" height="100">
         <h1>Military Clothing</h1>
         <p class="site-description">Votre destination pour des vêtements militaires de qualité</p>
         <nav>
@@ -29,13 +31,13 @@
     <div class="container">
         <h2>T-shirt</h2>
         <div class="product">
-            <img src="../images/tshirt%20camouflage.jpg" alt="Camouflage t-shirt" height="150" width="150">
+            <img src="../images/tshirt%20camouflage.jpg" alt="Camouflage t-shirt" height="150" width="130">
             <h5>Camouflage T-shirt</h5>
             <p class="price">$35</p>
             <button class="btn" onclick="addToCart()">Add to Cart</button>
         </div>
         <div class="product">
-            <img src="../images/tshirt%20entrainement.jpg" alt="Training T-shirt" height="150" width="150">
+            <img src="../images/tshirt%20entrainement.jpg" alt="Training T-shirt" height="150" width="175">
             <h5>Training T-shirt</h5>
             <p class="price">$32,34</p>
             <button class="btn" onclick="addToCart()">Add to Cart</button>
@@ -46,62 +48,61 @@
     <div class="container">
         <h2>Shirts</h2>
         <div class="product">
-            <img src="../images/chemise%20de%20combat%20tactique%20Trooper.jpg" alt="Camouflage Shirt" height="150" width="150">
+            <img src="../images/chemise%20de%20combat%20tactique%20Trooper.jpg" alt="Camouflage Shirt" height="200" width="150">
             <h5>Tactical Combat Shirt Trooper</h5>
             <p class="price">$20</p>
             <button class="btn" onclick="addToCart()">Add to Cart</button>
         </div>
         <div class="product">
-            <img src="../images/chemise%20entrainement.jpg" alt="Camouflage Shirt" height="150" width="150">
+            <img src="../images/chemise%20entrainement.jpg" alt="Camouflage Shirt" height="200" width="140">
             <h5>Training Shirt</h5>
             <p class="price">$26,50</p>
             <button class="btn" onclick="addToCart()">Add to Cart</button>
         </div>
         <div class="product">
-            <img src="../images/chemise%20militaire%20US%20BDU.jpg" alt="Camouflage Shirt" height="150" width="150">
+            <img src="../images/chemise%20militaire%20US%20BDU.jpg" alt="Camouflage Shirt" height="200" width="142">
             <h5>Camouflage Shirt US BDU</h5>
             <p class="price">$23,99</p>
             <button class="btn" onclick="addToCart()">Add to Cart</button>
         </div>
         <div class="product">
-            <img src="../images/chemise%20opération%20tactique%20manches%20longues.jpg" alt="Camouflage Shirt" height="150" width="150">
+            <img src="../images/chemise%20opération%20tactique%20manches%20longues.jpg" alt="Camouflage Shirt" height="200" width="150">
             <h5>Shirt Tactical Operation</h5>
             <p class="price">$20</p>
             <button class="btn" onclick="addToCart()">Add to Cart</button>
         </div>
         <div class="product">
-            <img src="../images/us%20chemise%20maches%20longues%20noir.jpg" alt="Camouflage Black Shirt" height="150" width="150">
+            <img src="../images/us%20chemise%20maches%20longues%20noir.jpg" alt="Camouflage Black Shirt" height="110" width="150">
             <h5>US Shirt black</h5>
             <p class="price">$20</p>
             <button class="btn" onclick="addToCart()">Add to Cart</button>
         </div>
-        <br>
         <div class="product">
-            <img src="../images/chemise%20de%20combat%20ubas%20legere.jpg" alt="Camouflage Combat Shirt" height="150" width="150">
+            <img src="../images/chemise%20de%20combat%20ubas%20legere.jpg" alt="Camouflage Combat Shirt" height="110" width="198">
             <h5>Light UBAS Combat Shirt</h5>
             <p class="price">$20</p>
             <button class="btn" onclick="addToCart()">Add to Cart</button>
         </div>
         <div class="product">
-            <img src="../images/chemise%20tactique%20ubas.jpg" alt="Camouflage Tactique Shirt" height="150" width="150">
+            <img src="../images/chemise%20tactique%20ubas.jpg" alt="Camouflage Tactique Shirt" height="110" width="150">
             <h5>Camouflage Combat Shirt</h5>
             <p class="price">$21,75</p>
             <button class="btn" onclick="addToCart()">Add to Cart</button>
         </div>
         <div class="product">
-            <img src="../images/chemise%20officier%20us.jpg" alt="chemise officier" height="150" width="150">
+            <img src="../images/chemise%20officier%20us.jpg" alt="chemise officier" height="110" width="133">
             <h5>Officer Shirt</h5>
             <p class="price">$28,45</p>
             <button class="btn" onclick="addToCart()">Add to Cart</button>
         </div>
         <div class="product">
-            <img src="../images/chemise%20camouflage%20Bdu.jpg" alt="Camouflage BDU" height="150" width="150">
+            <img src="../images/chemise%20camouflage%20Bdu.jpg" alt="Camouflage BDU" height="110" width="148">
             <h5>Camouflage Shirt BDU</h5>
             <p class="price">$28,45</p>
             <button class="btn" onclick="addToCart()">Add to Cart</button>
         </div>
         <div class="product">
-            <img src="../images/chemise%20de%20combat%20desert.jpg" alt="Combat desert" height="150" width="150">
+            <img src="../images/chemise%20de%20combat%20desert.jpg" alt="Combat desert" height="110" width="175">
             <h5>Desert Camouflage Shirt</h5>
             <p class="price">$28,45</p>
             <button class="btn" onclick="addToCart()">Add to Cart</button>
@@ -118,13 +119,13 @@
             <button class="btn" onclick="addToCart()">Add to Cart</button>
         </div>
         <div class="product">
-            <img src="../images/bottes%20mlitaires%2012133.jpg" alt="Boots" height="150" width="150">
+            <img src="../images/bottes%20mlitaires%2012133.jpg" alt="Boots" height="150" width="160">
             <h5>Military Boots 12133</h5>
-            <p class="price">$27,64</p>
+            <p class="price">$37,64</p>
             <button class="btn" onclick="addToCart()">Add to Cart</button>
         </div>
         <div class="product">
-            <img src="../images/bottes%20mlitaires%2012181.jpg" alt="Boots" height="150" width="150">
+            <img src="../images/bottes%20mlitaires%2012181.jpg" alt="Boots" height="150" width="160">
             <h5>Military Boots 12181</h5>
             <p class="price">$46,73</p>
             <button class="btn" onclick="addToCart()">Add to Cart</button>
@@ -135,57 +136,57 @@
     <div class="container">
         <h2>Jackets, Vests and Uniform set</h2>
         <div class="product">
-            <img src="../images/vesteMilitaire.jpg" alt="Jacket" height="150" width="150">
+            <img src="../images/vesteMilitaire.jpg" alt="Jacket" height="150" width="195">
             <h5>Jacket</h5>
             <p class="price">$35</p>
             <button class="btn" onclick="addToCart()">Add to Cart</button>
         </div>
         <div class="product">
-            <img src="../images/gilet%20tactique%20de%20combat%20+poches.jpg" alt="Vest" height="150" width="150">
+            <img src="../images/gilet%20tactique%20de%20combat%20+poches.jpg" alt="Vest" height="150" width="242">
             <h5>Combat Tactical Vest</h5>
             <p class="price">$45,55</p>
             <button class="btn" onclick="addToCart()">Add to Cart</button>
         </div>
         <div class="product">
-            <img src="../images/ensemble%20de%20combat.jpg" alt="Set" height="150" width="150">
+            <img src="../images/ensemble%20de%20combat.jpg" alt="Set" height="150" width="178">
             <h5>Combat Uniform</h5>
             <p class="price">$55</p>
             <button class="btn" onclick="addToCart()">Add to Cart</button>
         </div>
         <div class="product">
-            <img src="../images/veste%20camo%20anorak.jpg" alt="Set" height="150" width="150">
-            <h5>Combat Uniform</h5>
+            <img src="../images/veste%20camo%20anorak.jpg" alt="Set" height="150" width="181">
+            <h5>Anorak Camo</h5>
             <p class="price">$42,50</p>
             <button class="btn" onclick="addToCart()">Add to Cart</button>
         </div>
         <div class="product">
-            <img src="../images/veste%20genuine%20issue.jpg" alt="Set" height="150" width="150">
-            <h5>Combat Uniform</h5>
+            <img src="../images/veste%20genuine%20issue.jpg" alt="Set" height="150" width="180">
+            <h5>Genuise Issue</h5>
             <p class="price">$51,98</p>
             <button class="btn" onclick="addToCart()">Add to Cart</button>
         </div>
         <div class="product">
-            <img src="../images/veste%20helikon%20waterproof.jpg" alt="Set" height="150" width="150">
-            <h5>Combat Uniform</h5>
+            <img src="../images/veste%20helikon%20waterproof.jpg" alt="Set" height="150" width="180">
+            <h5>Helikon Waterproof</h5>
             <p class="price">$58,65</p>
             <button class="btn" onclick="addToCart()">Add to Cart</button>
         </div>
         <div class="product">
-            <img src="../images/veste%20leather%20bomber.jpg" alt="Set" height="150" width="150">
-            <h5>Combat Uniform</h5>
+            <img src="../images/veste%20leather%20bomber.jpg" alt="Set" height="150" width="178">
+            <h5>Leather Bomber</h5>
             <p class="price">$64,99</p>
             <button class="btn" onclick="addToCart()">Add to Cart</button>
         </div>
         <div class="product">
-            <img src="../images/veste%20surplus%20marpat.jpg" alt="Set" height="150" width="150">
-            <h5>Combat Uniform</h5>
+            <img src="../images/veste%20surplus%20marpat.jpg" alt="Set" height="150" width="160">
+            <h5>Surplus Jacket Marpat</h5>
             <p class="price">$45,68</p>
             <button class="btn" onclick="addToCart()">Add to Cart</button>
         </div>
         <div class="product">
-            <img src="../images/veste%20trellis%20BDU.jpg" alt="Set" height="150" width="150">
-            <h5>Combat Uniform</h5>
-            <p class="price">$55</p>
+            <img src="../images/veste%20trellis%20BDU.jpg" alt="Set" height="150" width="178">
+            <h5>Trellis Jacket BDU</h5>
+            <p class="price">$55,97</p>
             <button class="btn" onclick="addToCart()">Add to Cart</button>
         </div>
     </div>
