--- a/html/suites.html
+++ b/html/suites.html
@@ -12,7 +12,7 @@
     <div class="container">
         <img src="../images/US-Army-Logo.png" alt="200" width="200" height="100">
         <h1>Military Clothing</h1>
-        <p class="site-description">Votre destination pour des vêtements militaires de qualité</p>
+        <p class="site-description">Your destination for quality military clothing</p>
         <nav>
             <ul>
                 <li><a href="index.html">Accueil</a></li>
