--- a/html/index.html
+++ b/html/index.html
@@ -41,26 +41,26 @@
         <h2>Featured Products</h2>
         <div class="product">
             <img src="../images/veste%20leather%20bomber.jpg" alt="Set" height="150" width="175">
-            <h5>Combat Uniform</h5>
-            <p class="price">$64,99</p>
+            <h5>Leather Bomber</h5>
+            <p class="price">$64,00</p>
             <button class="btn" onclick="addToCart()">Add to Cart</button>
         </div>
         <div class="product">
             <img src="../images/chemise%20tactique%20ubas.jpg" alt="Camouflage combat shirt" height="150" width="130" onclick="showInfo(this)">
-            <h5>Combat Shirt</h5>
-            <p class="price">$21,75</p>
+            <h5>Combat Shirt UBAS</h5>
+            <p class="price">$21,00</p>
             <button class="btn" onclick="addToCart()">Add to Cart</button>
         </div>
         <div class="product">
             <img src="../images/gilet%20tactique%20de%20combat%20+poches.jpg" alt="Vest" height="50" width="213">
             <h5>Combat Tactical Vest</h5>
-            <p class="price">$45,55</p>
+            <p class="price">$45,00</p>
             <button class="btn" onclick="addToCart()">Add to Cart</button>
         </div>
         <div class="product">
             <img src="../images/veste%20trellis%20BDU.jpg" alt="Set" height="150" width="175">
-            <h5>Combat Uniform</h5>
-            <p class="price">$55</p>
+            <h5>Trellis Jacket BDU</h5>
+            <p class="price">$55,00</p>
             <button class="btn" onclick="addToCart()">Add to Cart</button>
         </div>
         <div class="product">
@@ -78,19 +78,19 @@
         <div class="product">
             <img src="../images/vesteMilitaire.jpg" alt="Jacket" height="150" width="175">
             <h5>Jacket</h5>
-            <p class="price">$35</p>
+            <p class="price">$35,00</p>
             <button class="btn" onclick="addToCart()">Add to Cart</button>
         </div>
         <div class="product">
             <img src="../images/sac%20à%20dos%20100%20L%20CAMO.jpg" alt="Set" height="150" width="130">
             <h5>Backpack 100L CAMO</h5>
-            <p class="price">$31,49</p>
+            <p class="price">$31,00</p>
             <button class="btn" onclick="addToCart()">Add to Cart</button>
         </div>
         <div class="product">
             <img src="../images/bottes%20militaires%2012147.jpg" alt="Boots" height="150" width="116">
             <h5>Military Boots 12147</h5>
-            <p class="price">$33,35</p>
+            <p class="price">$33,00</p>
             <button class="btn" onclick="addToCart()">Add to Cart</button>
         </div>
     </div>
