--- a/html/index.html
+++ b/html/index.html
@@ -113,19 +113,15 @@
                 <img src="/images/équipe1.jpg" alt="Our Team">
             </div>
             <div class="about-content">
-                <h5>Contact Us</h5>
-                <p>For any questions or inquiries, feel free to contact us via email or phone.
-                    We are here to assist you!</p>
                 <h5>Our Experience</h5>
-                <p>We have over 10 years of experience in providing quality military clothing.
-                    Our passionate team is dedicated to offering the best products and services to our customers.</p>
+                <p>With over a decade of experience in providing quality military clothing,
+                    our dedicated team is committed to offering the best products and services<br> to our customers.</p>
                 <h5>Our Values</h5>
-                <p>We believe in honor, integrity, and dedication. Our motivation comes from our respect
-                    for those who serve and protect our countries. Our uniqueness lies in our commitment
-                    to quality and authenticity.</p>
+                <p>We uphold honor, integrity, and dedication. Our motivation stems from our deep respect
+                    for those who serve and protect our countries. Our commitment<br> to quality and authenticity sets us apart.</p>
                 <h5>Our Brand</h5>
-                <p>Our brand stands for excellence and reliability. We are committed to providing
-                    high-quality products that meet the strictest standards. We take pride in serving those
+                <p>Our brand symbolizes excellence and reliability. We're devoted to delivering
+                    high-quality products that meet the highest standards. We take pride in<br> serving those
                     who serve.</p>
             </div>
         </div>
@@ -135,15 +131,16 @@
 <footer>
     <div class="container">
         <h4>Contact</h4>
-        <p>For any questions or inquiries, feel free to contact us:</p>
+        <p>If you have any questions or inquiries, please feel free to contact us:</p>
         <ul>
             <li>Email: contact@militaryclothing.com</li>
             <li>Phone: +1234567890</li>
-            <li>Address: 2503 Vine Street, Hays, United Sates of America</li>
+            <li>Address: 2503 Vine Street, Hays, United States of America</li>
         </ul>
         <p>&copy; 2024 Military Clothing</p>
     </div>
 </footer>
+
 
 <script src="../java_script/index.js"></script>
 </body>
