--- a/html/index.html
+++ b/html/index.html
@@ -10,9 +10,8 @@
 <body>
 <header>
     <div class="container">
-        <img src="../images/US-Army-Logo.png" alt="200" width="200" height="100">
-        <h1>Military Clothing</h1>
-        <p class="site-description">Your destination for quality military clothing</p>
+        <div class="site-menu"><img src="../images/US-Army-Logo.png" alt="200" width="150" height="75">
+        <pre><h3>Military Clothing</h3><h5>     Your destination for quality military clothing</h5></pre></div>
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
@@ -22,9 +21,9 @@
             </ul>
         </nav>
         <div class="cart-icon">
-            <img src="../images/panier.jpg" alt="Cart">
-            <span class="cart-counter">0</span>
-        </div>
+        <img src="../images/panier.jpg" alt="Cart">
+        <span class="cart-counter">0</span>
+    </div>
     </div>
 </header>
 
@@ -128,7 +127,7 @@
     </div>
 </footer>
 
-<footer>
+<footer id="contact">
     <div class="container">
         <h4>Contact</h4>
         <p>If you have any questions or inquiries, please feel free to contact us:</p>
