--- a/html/suites.html
+++ b/html/suites.html
@@ -99,7 +99,7 @@
             <img src="../images/chemise%20officier%20us.jpg" alt="chemise officier" height="110" width="133">
             <h5>Officer Shirt</h5>
             <p class="price">$28,00</p>
-            <button class="btn" onclick="renderCart()">Add to Cart</button>
+            <button class="btn" onclick="addToCart()">Add to Cart</button>
         </div>
         <div class="product">
             <img src="../images/chemise%20camouflage%20Bdu.jpg" alt="Camouflage BDU" height="110" width="148">
