--- a/html/suites.html
+++ b/html/suites.html
@@ -203,13 +203,13 @@
         <div class="product">
             <img src="../images/sac%20à%20dos%20brandis%20us%20cooper.jpg" alt="Set" height="150" width="150">
             <h5>Backpack Brandis US Cooper</h5>
-            <p class="price">$31,00</p>
+            <p class="price">$67,00</p>
             <button class="btn" onclick="addToCart()">Add to Cart</button>
         </div>
         <div class="product">
             <img src="../images/sac%20à%20dos%20100%20L%20CAMO.jpg" alt="Set" height="150" width="150">
             <h5>Backpack 100L CAMO</h5>
-            <p class="price">$31,00</p>
+            <p class="price">63,00</p>
             <button class="btn" onclick="addToCart()">Add to Cart</button>
         </div>
     </div>
